# sid

./: LICENSE  PLAN-wda-migration.md  README.md  SPEC.md  pyproject.toml
docs/improvements/: 01-hierarchy.md  02-subcommand-help.md  03-context-command.md  04-error-model.md  05-device-targeting.md  06-element-matching.md  07-action-feedback.md  08-housekeeping.md  README.md
pippin/: main.py
pippin/commands/: context.py  doctor.py  interaction.py  system.py  verification.py  vision.py
pippin/utils/: capture.py  device.py  errors.py  executor.py  state.py  ui.py  wda.py
sid/: main.py
sid/commands/: doctor.py  interaction.py  system.py  verification.py  vision.py
sid/utils/: executor.py  ui.py
tests/: test_cli_integration.py  test_commands.py  test_context.py  test_device.py  test_errors.py  test_executor.py  test_feedback.py  test_matching.py  test_multisim_integration.py  test_state.py  test_vision_hierarchy.py  test_wda.py
